# world_happiness

./: .gitignore  LICENSE.txt  README.md  TUTORIAL.md  pyproject.toml
notebooks/: analysis.ipynb  analysis_colab.ipynb
src/happiness/: __init__.py  happiness_handler.py  happiness_visualizer.py
